--- a/src/app/components/atoms/heading/styles.module.scss
+++ b/src/app/components/atoms/heading/styles.module.scss
@@ -1,9 +1,11 @@
 .heading {
-  display: inline-flex;
+  display: flex;
+  text-align: center;
   flex-direction: column;
   font-family: var(--font-cormorant-garamond);
   font-weight: 700;
   letter-spacing: 3px;
+  font-size: 2rem;
 
   .children {
     padding: 0 0.25em;
