--- a/src/app/components/home/concept/styles.module.scss
+++ b/src/app/components/home/concept/styles.module.scss
@@ -12,10 +12,28 @@
   font-family: var(--font-cormorant-garamond);
   font-style: italic;
   font-size: 2rem;
+  margin-top: 4rem;
 }
 
 .cathcCopyJa {
   font-family: var(--font-cormorant-garamond);
   font-style: italic;
   font-size: 0.82rem;
+}
+
+.description {
+  font-family: var(--font-cormorant-garamond);
+  font-size: 1rem;
+  line-height: 2;
+  max-width: 600px;
+  text-align: center;
+  margin-top: 5rem;
+
+  p {
+    margin-bottom: 2rem;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
 }
