--- a/src/app/components/common/header/styles.module.scss
+++ b/src/app/components/common/header/styles.module.scss
@@ -15,7 +15,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 32px 46px;
+  padding: 32px 16px;
   margin: 0 auto;
 }
 
@@ -73,6 +73,7 @@
     height: 2px;
     border-radius: 2px;
     transition: all 0.3s ease;
+    background: #fff;
   }
 
   &.active {
@@ -181,6 +182,10 @@
 
 // PC用レイアウト
 @media (min-width: 768px) {
+  .headerContent {
+    padding: 32px 46px;
+  }
+
   .pcMenu {
     display: block;
   }
