--- a/src/app/components/common/footer/styles.module.scss
+++ b/src/app/components/common/footer/styles.module.scss
@@ -5,7 +5,7 @@
   margin-top: 100px;
   border-top: 1px solid #333;
   position: relative;
-  z-index: 10;
+  z-index: var(--z-section);
 }
 
 .footerContent {
