--- a/src/app/components/common/header/styles.module.scss
+++ b/src/app/components/common/header/styles.module.scss
@@ -5,7 +5,7 @@
   right: 0;
   width: 100%;
   background-color: rgba(0, 0, 0, 0);
-  z-index: 100;
+  z-index: var(--z-header);
   box-shadow: none;
   transition: all 0.3s ease;
   color: white;
@@ -98,7 +98,7 @@
   right: 0;
   bottom: 0;
   background-color: rgba(0, 0, 0, 0.5);
-  z-index: 200;
+  z-index: var(--z-menu);
   animation: fadeIn 0.3s ease;
 }
 
