--- a/src/app/components/home/contact/styles.module.scss
+++ b/src/app/components/home/contact/styles.module.scss
@@ -13,7 +13,7 @@
   padding-top: 100svh;
   padding-bottom: 5rem;
   position: relative;
-  z-index: 10;
+  z-index: var(--z-section);
 }
 
 .contactHeader {
