--- a/src/app/components/common/facility/FacilityDetails.module.scss
+++ b/src/app/components/common/facility/FacilityDetails.module.scss
@@ -3,11 +3,19 @@
   height: 100%;
   display: flex;
   flex-direction: column;
+
+  @media (max-width: 767px) {
+    padding: 0 1rem;
+  }
 }
 
 // Header section
 .headerArea {
   margin-bottom: 3rem;
+
+  @media (max-width: 767px) {
+    margin-bottom: 1.5rem;
+  }
 }
 
 .metaRow {
@@ -40,12 +48,22 @@
   color: #f5f5f0;
   font-family: serif;
   font-style: italic;
+
+  @media (max-width: 767px) {
+    font-size: 1.25rem;
+    margin-bottom: 1rem;
+  }
 }
 
 .description {
   color: #a8a39d;
   max-width: 42rem;
   line-height: 1.625;
+
+  @media (max-width: 767px) {
+    font-size: 0.875rem;
+    line-height: 1.75;
+  }
 }
 
 // Body section - Two columns
@@ -53,6 +71,11 @@
   display: flex;
   gap: 3rem;
   flex: 1;
+
+  @media (max-width: 767px) {
+    flex-direction: column;
+    gap: 1.5rem;
+  }
 }
 
 // Left column - Images
@@ -69,6 +92,10 @@
   height: 340px;
   object-fit: cover;
   border-radius: 0.5rem;
+
+  @media (max-width: 767px) {
+    height: 200px;
+  }
 }
 
 .imageCaption {
@@ -94,6 +121,11 @@
   &:hover {
     opacity: 0.8;
   }
+
+  @media (max-width: 767px) {
+    width: 3.5rem;
+    height: 3.5rem;
+  }
 }
 
 .galleryImage {
@@ -108,6 +140,10 @@
   display: flex;
   flex-direction: column;
   gap: 2rem;
+
+  @media (max-width: 767px) {
+    gap: 1.5rem;
+  }
 }
 
 .detailsList {
@@ -170,5 +206,10 @@
     font-size: 0.75rem;
     color: #78716c;
     line-height: 1.625;
+  }
+
+  @media (max-width: 767px) {
+    margin-top: 0;
+    padding-top: 1rem;
   }
 }
