--- a/src/app/components/home/concept/styles.module.scss
+++ b/src/app/components/home/concept/styles.module.scss
@@ -11,6 +11,10 @@
   flex-direction: column;
   color: #fff;
   z-index: var(--z-section);
+
+  @media (max-width: 767px) {
+    padding: 0 1rem;
+  }
 }
 
 .divB {
@@ -53,6 +57,10 @@
   font-style: italic;
   font-size: 2rem;
   margin-top: 4rem;
+
+  @media (max-width: 767px) {
+    font-size: 1.4rem;
+  }
 }
 
 .cathcCopyJa {
