--- a/src/app/components/common/header/styles.module.scss
+++ b/src/app/components/common/header/styles.module.scss
@@ -108,7 +108,7 @@
   right: 0;
   width: 100vw;
   height: 100vh;
-  background-color: #ffffff;
+  background-color: #1a1a1a;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -125,7 +125,7 @@
   border: none;
   font-size: 1.5rem;
   cursor: pointer;
-  color: #333;
+  color: #fff;
   padding: 8px;
   display: flex;
   align-items: center;
@@ -134,7 +134,7 @@
   height: 40px;
 
   &:hover {
-    color: #666;
+    color: #fff;
   }
 }
 
@@ -149,7 +149,7 @@
 }
 
 .modalMenuLink {
-  color: #333;
+  color: #fff;
   text-decoration: none;
   font-size: 1.3rem;
   font-weight: 600;
@@ -157,7 +157,7 @@
   display: block;
 
   &:hover {
-    color: #666;
+    color: #fff;
   }
 }
 
