--- a/src/app/components/atoms/heading/styles.module.scss
+++ b/src/app/components/atoms/heading/styles.module.scss
@@ -7,6 +7,10 @@
   letter-spacing: 3px;
   font-size: 2rem;
 
+  @media (max-width: 767px) {
+    font-size: 1.4rem;
+  }
+
   .children {
     padding: 0 0.25em;
   }
