--- a/src/app/components/home/contact/styles.module.scss
+++ b/src/app/components/home/contact/styles.module.scss
@@ -9,11 +9,13 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 2rem;
-  padding-top: 100svh;
-  padding-bottom: 5rem;
+  padding: 5rem 3rem;
   position: relative;
   z-index: var(--z-section);
+
+  @media (max-width: 767px) {
+    padding: 5rem 1rem;
+  }
 }
 
 .contactHeader {
@@ -25,6 +27,10 @@
     color: rgba(255, 255, 255, 0.6);
     font-size: 0.875rem;
     letter-spacing: 0.05em;
+
+    @media (max-width: 767px) {
+      display: none;
+    }
   }
 }
 
