--- a/src/app/components/common/footer/styles.module.scss
+++ b/src/app/components/common/footer/styles.module.scss
@@ -1,7 +1,7 @@
 .footer {
   background-color: #1a1a1a;
   color: #999;
-  padding: 60px 2%;
+  padding: 60px 46px;
   margin-top: 100px;
   border-top: 1px solid #333;
   position: relative;
