--- a/src/app/components/common/header/styles.module.scss
+++ b/src/app/components/common/header/styles.module.scss
@@ -4,6 +4,7 @@
   left: 0;
   right: 0;
   width: 100%;
+  padding: 32px 16px;
   background-color: rgba(0, 0, 0, 0);
   z-index: var(--z-header);
   box-shadow: none;
@@ -15,8 +16,8 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 32px 16px;
   margin: 0 auto;
+  max-width: 1400px;
 }
 
 .title {
@@ -181,7 +182,7 @@
 
 // PC用レイアウト
 @media (min-width: 768px) {
-  .headerContent {
+  .header {
     padding: 32px 46px;
   }
 
