--- a/src/app/components/home/contact/styles.module.scss
+++ b/src/app/components/home/contact/styles.module.scss
@@ -36,7 +36,7 @@
 
 .contactCard {
   width: 100%;
-  max-width: 90rem;
+  max-width: 1400px;
   background-color: rgba(255, 255, 255, 0.95);
   border-radius: 1rem;
   box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1);
