--- a/src/app/components/home/three/styles.module.scss
+++ b/src/app/components/home/three/styles.module.scss
@@ -8,7 +8,8 @@
   bottom: 0;
   left: 0;
   width: 100vw;
-  height: 100vh;
+  height: 100vh; /* fallback for older browsers */
+  height: 100dvh;
   z-index: var(--z-canvas);
 }
 
