--- a/src/app/components/home/three/styles.module.scss
+++ b/src/app/components/home/three/styles.module.scss
@@ -9,7 +9,7 @@
   left: 0;
   width: 100vw;
   height: 100vh; /* fallback for older browsers */
-  height: 100dvh;
+  height: 100svh;
   z-index: var(--z-canvas);
 }
 
